force-app/main/default/objects/Manuten_o_Preventiva__c/Manuten_o_Preventiva__c.object-meta.xml
<CustomObject>
    <label>Manutenção Preventiva</label>
    <nameField>
        <displayFormat>MP {00000000}</displayFormat>
        <label>Nº do Laudo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manutenções Preventivas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>