force-app/main/default/objects/Manuten_o_Preventiva__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Manutenções Preventivas</relationshipLabel>
    <relationshipName>Manuten_es_Preventivas</relationshipName>
    <type>Lookup</type>
</CustomField>