force-app/main/default/objects/Manuten_o_Preventiva__c/fields/Data_da_Manuten_o_Preventiva__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Manuten_o_Preventiva__c</fullName>
    <label>Data da Manutenção Preventiva</label>
    <type>Date</type>
</CustomField>