force-app/main/default/objects/Manuten_o_Preventiva__c/fields/Data_da_Pr_xima_Manuten_o_Preventiva_2__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Pr_xima_Manuten_o_Preventiva_2__c</fullName>
    <label>Data da Próxima Manutenção Preventiva(2)</label>
    <type>Date</type>
</CustomField>