force-app/main/default/objects/Manuten_o_Preventiva__c/fields/Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Equipamento__c</fullName>
    <label>Equipamento</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Manutenções Preventivas</relationshipLabel>
    <relationshipName>Manuten_es_Preventivas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>